<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/common_head"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/begin_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/common_head"
        android:layout_margin="10dp"
        android:text="@string/feedback_begin"
        android:textColor="@color/body_text"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/feedback_theme"
        android:layout_below="@+id/begin_tv"
        android:layout_margin="10dp"
        style="@style/body_text"
        android:hint="@string/your_theme"
        android:background="@drawable/input_bg"
        />


    <EditText
        android:id="@+id/feedback_suggestion"
        style="@style/body_text"
        android:layout_below="@+id/feedback_theme"
        android:layout_margin="10dp"
        android:gravity="left|top"
        android:background="@drawable/input_bg"
        android:hint="@string/suggestion_hint"
        android:minLines="5"
        android:padding="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/suggestion_last_tips"
        android:layout_below="@+id/feedback_suggestion"
        android:layout_margin="10dp"
        android:textSize="14sp"
        android:textColor="@color/body_hint"
        android:text="@string/suggestion_tips"/>

    <Button
        android:id="@+id/feedback_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/suggestion_last_tips"
        android:layout_margin="10dp"
        android:text="@string/question_submit"
        android:textSize="16sp"
        android:background="@drawable/common_btn_bg"/>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
